--- a/ru/apps.html
+++ b/ru/apps.html
@@ -134,8 +134,8 @@
 
                     <li class="apps__briefs-item" id="profile">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_android.png" class="apps__brief-image" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" alt="Главный профиль айфон" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_android.png" class="apps__brief-image" alt="Главный профиль андроид" /></div>
                     </div>
                         <div class="apps__brief-text-container">
                             <h2 class="section__title">Главный профиль</h2>
@@ -156,8 +156,8 @@
 
                     <li class="apps__briefs-item"  id="lenta">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.png" class="apps__brief-image" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_android.png" class="apps__brief-image" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.png" class="apps__brief-image" alt="Лента новостей айфон" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_android.png" class="apps__brief-image" alt="Лента новостей андроид" /></div>
                     </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Лента SFERA</h2>
@@ -178,9 +178,8 @@
 
                     <li class="apps__briefs-item"  id="asap">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.png" 
-                          class="apps__brief-image" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_android.png" class="apps__brief-image" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.png" class="apps__brief-image" alt="Мессенджер айфон" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_android.png" class="apps__brief-image" alt="Мессенджер андроид " /></div>
                       </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">ASAP</h2>
@@ -201,9 +200,8 @@
 
                     <li class="apps__briefs-item" id="meetnet">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png"
-                          class="apps__brief-image" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_android.png" class="apps__brief-image" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png"  class="apps__brief-image" alt="сервис для знакомств айфон" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_android.png" class="apps__brief-image" alt="сервис для знакомств андроид" /></div>
                     </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Meetnet</h2>
@@ -225,8 +223,8 @@
                     <li class="apps__briefs-item"id="choose">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_ios.png" class="apps__brief-image" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_android.png" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_ios.png" class="apps__brief-image" alt="аналитика красивые фотки " /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_android.png" class="apps__brief-image" alt="аналитика красивые фотки" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -249,8 +247,8 @@
                     <li class="apps__briefs-item"id="blackbox">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.png" class="apps__brief-image" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_android.png" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.png" class="apps__brief-image" alt="новое общение по геолокации" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_android.png" class="apps__brief-image" alt="новое общение по геолокации" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -274,9 +272,8 @@
                     <li class="apps__briefs-item" id="videos">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/videos_ios.png"
-                            class="apps__brief-image" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/videos_android.png"class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/videos_ios.png" class="apps__brief-image" alt="Видео сервис" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/videos_android.png"class="apps__brief-image" alt="Видео сервис" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -299,8 +296,8 @@
                     <li class="apps__briefs-item" id="joblite">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/joblite_ios.png" class="apps__brief-image" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/joblite_android.png" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/joblite_ios.png" class="apps__brief-image" alt="подприложение по поиску работы айфон" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/joblite_android.png" class="apps__brief-image" alt="подприложение по поиску работы андроид" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -324,8 +321,8 @@
                     <li class="apps__briefs-item" id="findfriend">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_ios.png" class="apps__brief-image" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_android.png" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_ios.png" class="apps__brief-image" alt="поиск новых друзей в реальной офлайн жизни" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_android.png" class="apps__brief-image" alt="поиск новых друзей в реальной офлайн жизни" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container" >
@@ -355,37 +352,37 @@
                 <div class="swiper-wrapper apps__future-slide">
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image" alt="Мероприятия" /></div>
                             <p class="swiper-slide__title">Мероприятия</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/fm.png" class="swiper-slide__image" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/fm.png" class="swiper-slide__image" alt="Прямые трансляции" /></div>
                             <p class="swiper-slide__title">FM-каналы</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/voice.png" class="swiper-slide__image" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/voice.png" class="swiper-slide__image" alt="Голосовой канал" /></div>
                             <p class="swiper-slide__title">Голосовые каналы</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/book.png"class="swiper-slide__image" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/book.png"class="swiper-slide__image" alt="Книги" /></div>
                             <p class="swiper-slide__title">Книги</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/talents.png" class="swiper-slide__image" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/talents.png" class="swiper-slide__image" alt="Мои таланты" /></div>
                             <p class="swiper-slide__title">Таланты</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" alt="Работа и бизнес" /></div>
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
                     </div>
@@ -399,37 +396,37 @@
               <div class="swiper-wrapper apps__future-slide">
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/camedy.png" class="swiper-slide__image" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/camedy.png" class="swiper-slide__image" alt="Комедийная лента" /></div>
                           <p class="swiper-slide__title">Comedy-лента</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/spor-t.png" class="swiper-slide__image" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/spor-t.png" class="swiper-slide__image" alt="Спорт Спортивное питание Диета" /></div>
                           <p class="swiper-slide__title">Spor-T</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/stravel.png" class="swiper-slide__image" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/stravel.png" class="swiper-slide__image" alt="Путишествие отели где путишествовать" /></div>
                           <p class="swiper-slide__title">sTravel</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/industr.png"class="swiper-slide__image" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/industr.png"class="swiper-slide__image" alt="Свежие новости" /></div>
                           <p class="swiper-slide__title">Industry news</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" class="swiper-slide__image" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" class="swiper-slide__image" alt="Хореография Музыка Дизайн" /></div>
                           <p class="swiper-slide__title">Art Lab</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" alt="Календарь" /></div>
                           <p class="swiper-slide__title">Calendar</p>
                       </div>
                   </div>
