--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -94,9 +94,9 @@
             </div>
             <div class="lead__images">
               <div class="lead__image__ios">
-                <img src="../assets/img/downloads/android .png" class="lead__image" /></div>
+                <img src="../assets/img/downloads/android .png" class="lead__image" alt="телефон приложение андроид" /></div>
               <div class="lead__image__android">
-                <img src="../assets/img/downloads/ios.png" class="lead__image" /></div>
+                <img src="../assets/img/downloads/ios.png" class="lead__image" alt="телефон приложение айфон" /></div>
             </div>
           </div>
         </div>
