--- a/ru/startups.html
+++ b/ru/startups.html
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="lead__images">
-              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" /></div>
+              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" alt="Айфон про сфера" /></div>
             </div>
           </div>
     </section>
@@ -121,7 +121,7 @@
       <div class="frame__wrapper">
         <div class="frame__list__main">
           <ul  class="frame__list">
-            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png"/></li>
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Приложение сфера " /></li>
             <li class="frame__list__item">Мы считаем, что многие сервисы, безусловно полезны и нужны пользователям, но зачастую, из - за высокой стоимости разработки или затрат на привлечение пользователя, реализация проектов становится невозможной. В рамках проекта  SFERA, в несколько раз снижается стоимость разработки и нет необходимости нести финансовые расходы на маркетинг.</li>
           </ul>
         </div>
