--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 				<div class="section-first">
 					<ul class="list-left">
 						<li class="section-first-paragraf"><span class="section-first-color-sfera">SFERA</span> - это не только</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка " class="link-list-left-one">Отличное качество звонков</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка" class="link-list-left-one">Удобный поиск работы</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка" class="link-list-left-one">Доступный сервис знакомств</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка" class="link-list-left-one">Мгновенный поиск друзей</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Отличное качество звонков</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Удобный поиск работы</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Доступный сервис знакомств</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Мгновенный поиск друзей</li>
 						<li class="link-list-left-color">Все бесплатно и без рекламмы</li>
 					<li class="lead__links-container apps__lead-links-container">
 						<ul class="lead__download-links-list">
@@ -95,15 +95,15 @@
 					</ul>
 				</li>
 				<div class="section-block-one">
-					<span ><img class="section-image-one" src="assets/image-lending/1920/block 1-1.png" alt="Телефон Андроид"></span>
-					<span ><img class="section-image-two" src="assets/image-lending/1920/block 1-2.png " alt="Телефон Айфон"></span>
+					<span ><img class="section-image-one" src="assets/image-lending/1920/block 1-1.png" alt=""></span>
+					<span ><img class="section-image-two" src="assets/image-lending/1920/block 1-2.png " alt=""></span>
 				</div>
 			</div>
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one" src="assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt="Андроид меню"></span>
-					<span><img class="section-two-image-two" src="assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt="Айфон меню"></span>
+					<span ><img class="section-two-image-one" src="assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt=""></span>
+					<span><img class="section-two-image-two" src="assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt=""></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">МЕССЕНДЖЕР</span>
@@ -123,15 +123,15 @@
 				<div class="block-for-list">
 					<ul class="list-left-for">
 						<li><button class="block-first-color">#Что нужно тестировать?</button></li>
-						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Синяя галочка" class="link-list-left-for">Звонки</li>
-						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Синяя галочка" class="link-list-left-for">Отправка сообщений</li>
-						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Синяя галочка" class="link-list-left-for">Загрузка медиа</li>
+						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Звонки</li>
+						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Отправка сообщений</li>
+						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Загрузка медиа</li>
 						<li class="block-first-color-for">Пиши о проблемах в чат с основателем<br>ID SFERA 100 100 000 </li>
 					</ul>
 				</div>
 				<div class="block-for-image">
-					<span ><img class="block-for-image-one" src="assets/image-lending/1920/block 3-1.png" alt="Скачать приложени на айфон"></span>
-					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt="Скачать приложение на андроид"></span>
+					<span ><img class="block-for-image-one" src="assets/image-lending/1920/block 3-1.png" alt=""></span>
+					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt=""></span>
 				</div>
 			</section>
 			
@@ -143,12 +143,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios1.png" alt="ASAP айфон ">
+								<img class="front" src="assets/image-lending/1920/ios1.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back"src="assets/img/apps/asap_android.png" alt="ASAP а">
+								<img class="back"src="assets/img/apps/asap_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -161,16 +161,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-two" src="assets/image-lending/1920/ios2.png" alt="Профиль айфон"/>
-
+								<img class="front" src="assets/image-lending/1920/ios2.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-two" src="assets/img/apps/profile_android.png" alt="Профиль андроид"/>
-
+								<img class="back" src="assets/img/apps/profile_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -183,16 +179,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-three" src="assets/image-lending/1920/ios3.png" alt="Лента новостей айфон"/>
-
+								<img class="front" src="assets/image-lending/1920/ios3.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-three" src="assets/img/apps/lenta_android.png" alt="Лента новостей андроид"/>
-
+								<img class="back" src="assets/img/apps/lenta_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -205,16 +197,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img  class="front-four" src="assets/image-lending/1920/ios4.png" alt="Видео на айфоне"/>
-
+								<img  class="front" src="assets/image-lending/1920/ios4.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-four" src="assets/img/apps/videos_android.png" alt="Видео на андроиде"/>
-
+								<img class="back" src="assets/img/apps/videos_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -227,16 +215,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-five" src="assets/image-lending/1920/ios5.png" alt="Blackbox айфон"/>
-
+								<img class="front" src="assets/image-lending/1920/ios5.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-five" src="assets/img/apps/blackbox_android.png" alt="Blackbox андроид"/>
-
+								<img class="back" src="assets/img/apps/blackbox_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -249,16 +233,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-six" src="assets/image-lending/1920/ios6.png" alt="Поиск друзей "/>
-
+								<img class="front" src="assets/image-lending/1920/ios6.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-six" src="assets/img/apps/findfriends_android.png" alt="Поиск друзей"/>
-
+								<img class="back" src="assets/img/apps/findfriends_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -271,16 +251,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-seven" src="assets/image-lending/1920/ios7.png" alt="Найти  вторую половинку "/>
-
+								<img class="front" src="assets/image-lending/1920/ios7.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-seven" src="assets/img/apps/meetnet_android.png" alt="Найти  вторую половинку"/>
-
+								<img class="back" src="assets/img/apps/meetnet_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -293,16 +269,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-eight" src="assets/image-lending/1920/ios8.png" alt="Поиск работы "/>
-
+								<img class="front" src="assets/image-lending/1920/ios8.png" alt="">
 							</div> 
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-eight" src="assets/img/apps/joblite_android.png" alt="Поиск работы "/>
-
+								<img class="back" src="assets/img/apps/joblite_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -315,16 +287,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-
-								<img class="front-nine" src="assets/image-lending/1920/ios9.png" alt="Красифые картинки айфон"/>
-
+								<img class="front" src="assets/image-lending/1920/ios9.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-
-								<img class="back-nine" src="assets/img/apps/choose_android.png" alt="Красивые картинки андроид"/>
-
+								<img class="back" src="assets/img/apps/choose_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -360,55 +328,55 @@
 				<p class="about-as-heading-last">СЕЙЧАС У НАС <span class="about-as-heading-color">БОЛЕЕ 20 СЕРВИСОВ</span> В РАЗРАБОТКЕ</p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/1 921.png" alt="Мероприятия">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/1 921.png" alt="">
 						<p class="block-eight-card-list-paragraf">Мероприятия</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/2 24.png" alt="Прямые трансляции ">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/2 24.png" alt="">
 						<p class="block-eight-card-list-paragraf">FM-каналы</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/3.png" alt="Голосовой канал">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/3.png" alt="">
 						<p class="block-eight-card-list-paragraf">Голосовые <br> каналы</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/4.png" alt="Книги">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/4.png" alt="">
 						<p class="block-eight-card-list-paragraf">Книги</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/5.png" alt=" Мои таланты ">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/5.png" alt="">
 						<p class="block-eight-card-list-paragraf">Таланты</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/6.png" alt="Работа и бизнес ">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/6.png" alt="">
 						<p class="block-eight-card-list-paragraf">Work & <br> Business</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/9.png" alt="Спорт Спортивное питание Диета">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/9.png" alt="">
 						<p class="block-eight-card-list-paragraf">Spor-T</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/8.png" alt="Комедийная лента">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/8.png" alt="">
 						<p class="block-eight-card-list-paragraf">Comedy-лента</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/10.png" alt="Путишествие отели где путишествовать ">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/10.png" alt="">
 						<p class="block-eight-card-list-paragraf">sTravel</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"src="./assets/image-lending/general/11.png" alt="Свежие новости">
+						<img class="block-eight-card-image"src="./assets/image-lending/general/11.png" alt="">
 						<p class="block-eight-card-list-paragraf">Industry news</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/12.png" alt="Хореография Музыка Дизайн">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/12.png" alt="">
 						<p class="block-eight-card-list-paragraf">Art Lab</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/13.png" alt="Вопросы Лента Тренды">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/13.png" alt="">
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/general/14.png" alt="Календарь">
+						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/general/14.png" alt="">
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
