--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 				<div class="section-first">
 					<ul class="list-left">
 						<li class="section-first-paragraf"><span class="section-first-color-sfera">SFERA</span> - это не только</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Отличное качество звонков</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Удобный поиск работы</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Доступный сервис знакомств</li>
-						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Мгновенный поиск друзей</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка " class="link-list-left-one">Отличное качество звонков</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка" class="link-list-left-one">Удобный поиск работы</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка" class="link-list-left-one">Доступный сервис знакомств</li>
+						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Галочка" class="link-list-left-one">Мгновенный поиск друзей</li>
 						<li class="link-list-left-color">Все бесплатно и без рекламмы</li>
 					<li class="lead__links-container apps__lead-links-container">
 						<ul class="lead__download-links-list">
@@ -95,8 +95,8 @@
 					</ul>
 				</li>
 				<div class="section-block-one">
-					<span ><img class="section-image-one" src="assets/image-lending/1920/block 1-1.png" alt=""></span>
-					<span ><img class="section-image-two" src="assets/image-lending/1920/block 1-2.png " alt=""></span>
+					<span ><img class="section-image-one" src="assets/image-lending/1920/block 1-1.png" alt="Телефон Андроид"></span>
+					<span ><img class="section-image-two" src="assets/image-lending/1920/block 1-2.png " alt="Телефон Айфон"></span>
 				</div>
 			</div>
 			</section>
