--- a/ru/about.html
+++ b/ru/about.html
@@ -95,25 +95,25 @@
               </ul>
             </div>
           </div>
-          <div class="section-about__wrapper_lead-images"><img src="../assets/img/about-images/lead-img.png" class="section-about__wrapper_lead-img" /></div>
+          <div class="section-about__wrapper_lead-images"><img src="../assets/img/about-images/lead-img.png" class="section-about__wrapper_lead-img" alt="Картинка айфона" /></div>
         </div>
       </div>
       <div class="section-info">
         <div class="section-info__wrapper">
           <div class="section-info__wrapper__block">
-            <div class="section-info__wrapper__block__img"><img src="../assets/img/about-images/info-one.png" class="section-info__wrapper__img" /></div>
+            <div class="section-info__wrapper__block__img"><img src="../assets/img/about-images/info-one.png" class="section-info__wrapper__img" alt="Айфон множество функций"/></div>
             <div class="section-info__wrapper__block__text">
               <p class="section-info__wrapper__block__text-explanation">Проект SFERA — это независимый проект, который создает небольшая команда, главная цель которого — изменить мир к лучшему и начать этот процесс «с основ», с пользователей, с контента, который потребляет каждый человек, и с решения задач, которые не смотря на все технологии, все еще остаются не решенными.</p>
             </div>
           </div>
           <div class="section-info__wrapper__block--reverse">
-            <div class="section-info__wrapper__block__img"><img src="../assets/img/about-images/info-two.png" class="section-info__wrapper__img" /></div>
+            <div class="section-info__wrapper__block__img"><img src="../assets/img/about-images/info-two.png" class="section-info__wrapper__img" alt="" /></div>
             <div class="section-info__wrapper__block__text">
               <p class="section-info__wrapper__block__text-explanation">SFERA находится вне политики, вне государственности. Мы считаем своим домом весь мир и хотим работать на благо всех людей на планете. Для нас не имеет значения язык, на котором говорит человек, цвет кожи, раса и вера. Мы считаем, что наш мир можно сделать лучше и он должен быть лучше. Мы верим, что это возможно.</p>
             </div>
           </div>
           <div class="section-info__wrapper__block">
-          <div class="section-info__wrapper__block__img"><img src="../assets/img/about-images/info-tree.png"  class="section-info__wrapper__img" /></div>
+          <div class="section-info__wrapper__block__img"><img src="../assets/img/about-images/info-tree.png"  class="section-info__wrapper__img" alt="" /></div>
           <div class="section-info__wrapper__block__text">
         <p class="section-info__wrapper__block__text-explanation">Проект SFERA — это независимый проект, который создает небольшая команда, главная цель которого — изменить мир к лучшему и начать этот процесс «с основ», с пользователей, с контента, который потребляет каждый человек, и с решения задач, которые не смотря на все технологии, все еще остаются не решенными.</p>
     </div>
