--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one" src="assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt=""></span>
-					<span><img class="section-two-image-two" src="assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt=""></span>
+					<span ><img class="section-two-image-one" src="assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt="Андроид меню"></span>
+					<span><img class="section-two-image-two" src="assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt="Айфон меню"></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">МЕССЕНДЖЕР</span>
@@ -123,15 +123,15 @@
 				<div class="block-for-list">
 					<ul class="list-left-for">
 						<li><button class="block-first-color">#Что нужно тестировать?</button></li>
-						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Звонки</li>
-						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Отправка сообщений</li>
-						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Загрузка медиа</li>
+						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Синяя галочка" class="link-list-left-for">Звонки</li>
+						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Синяя галочка" class="link-list-left-for">Отправка сообщений</li>
+						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Синяя галочка" class="link-list-left-for">Загрузка медиа</li>
 						<li class="block-first-color-for">Пиши о проблемах в чат с основателем<br>ID SFERA 100 100 000 </li>
 					</ul>
 				</div>
 				<div class="block-for-image">
-					<span ><img class="block-for-image-one" src="assets/image-lending/1920/block 3-1.png" alt=""></span>
-					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt=""></span>
+					<span ><img class="block-for-image-one" src="assets/image-lending/1920/block 3-1.png" alt="Скачать приложени на айфон"></span>
+					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt="Скачать приложение на андроид"></span>
 				</div>
 			</section>
 			
@@ -143,12 +143,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios1.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios1.png" alt="ASAP айфон">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back"src="assets/img/apps/asap_android.png" alt="">
+								<img class="back"src="assets/img/apps/asap_android.png" alt="ASAP андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -161,12 +161,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios2.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios2.png" alt="Профиль айфон">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/profile_android.png" alt="">
+								<img class="back" src="assets/img/apps/profile_android.png" alt="Профиль андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -179,12 +179,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios3.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios3.png" alt="Лента новостей айфон">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/lenta_android.png" alt="">
+								<img class="back" src="assets/img/apps/lenta_android.png" alt="Лента новостей андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -197,12 +197,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img  class="front" src="assets/image-lending/1920/ios4.png" alt="">
+								<img  class="front" src="assets/image-lending/1920/ios4.png" alt="Видео на айфоне">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/videos_android.png" alt="">
+								<img class="back" src="assets/img/apps/videos_android.png" alt="Видео на андроиде">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -215,12 +215,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios5.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios5.png" alt="Blackbox айфон">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/blackbox_android.png" alt="">
+								<img class="back" src="assets/img/apps/blackbox_android.png" alt="Blackbox андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -233,12 +233,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios6.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios6.png" alt="Поиск друзей">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/findfriends_android.png" alt="">
+								<img class="back" src="assets/img/apps/findfriends_android.png" alt="Поиск друзей">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -251,12 +251,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios7.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios7.png" alt="Найти  вторую половинку">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/meetnet_android.png" alt="">
+								<img class="back" src="assets/img/apps/meetnet_android.png" alt="Найти  вторую половинку">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -269,12 +269,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios8.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios8.png" alt="Поиск работы ">
 							</div> 
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/joblite_android.png" alt="">
+								<img class="back" src="assets/img/apps/joblite_android.png" alt="Поиск работы ">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -287,12 +287,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios9.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios9.png" alt="Красифые картинки айфон">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="assets/img/apps/choose_android.png" alt="">
+								<img class="back" src="assets/img/apps/choose_android.png" alt="Красифые картинки айфон">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -328,55 +328,55 @@
 				<p class="about-as-heading-last">СЕЙЧАС У НАС <span class="about-as-heading-color">БОЛЕЕ 20 СЕРВИСОВ</span> В РАЗРАБОТКЕ</p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/1 921.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/1 921.png" alt="Мероприятия">
 						<p class="block-eight-card-list-paragraf">Мероприятия</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/2 24.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/2 24.png" alt="Прямые трансляции ">
 						<p class="block-eight-card-list-paragraf">FM-каналы</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/3.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/3.png" alt="Голосовой канал">
 						<p class="block-eight-card-list-paragraf">Голосовые <br> каналы</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/4.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/4.png" alt="Книги">
 						<p class="block-eight-card-list-paragraf">Книги</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/5.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/5.png" alt=" Мои таланты ">
 						<p class="block-eight-card-list-paragraf">Таланты</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/6.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/6.png" alt="Работа и бизнес ">
 						<p class="block-eight-card-list-paragraf">Work & <br> Business</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/9.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/9.png" alt="Спорт Спортивное питание Диета">
 						<p class="block-eight-card-list-paragraf">Spor-T</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/8.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/8.png" alt="Комедийная лента">
 						<p class="block-eight-card-list-paragraf">Comedy-лента</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/10.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/10.png" alt="Путишествие отели где путишествовать ">
 						<p class="block-eight-card-list-paragraf">sTravel</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"src="./assets/image-lending/general/11.png" alt="">
+						<img class="block-eight-card-image"src="./assets/image-lending/general/11.png" alt="Свежие новости">
 						<p class="block-eight-card-list-paragraf">Industry news</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/12.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/12.png" alt="Хореография Музыка Дизайн">
 						<p class="block-eight-card-list-paragraf">Art Lab</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/13.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/13.png" alt="Вопросы Лента Тренды">
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/general/14.png" alt="">
+						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/general/14.png" alt="Календарь">
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
