--- a/ru/investment.html
+++ b/ru/investment.html
@@ -178,7 +178,7 @@
                 <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img src="../assets/img/investment/content_copy.svg" alt="img"></button></p>
 
                 <li class="card-body__list_3"> Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
-                <div class="card-body__list_4">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></div>
+                <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt=""></button></div>
               </ol>
               <div class="card-body__text">Осуществляя перевод, вы подтверждаете, что четко понимаете основы и понятия венчурного инвестирования и принципов работы стартапа, а также все риски, связанные с этим.</div>
             </div>
