--- a/ru/investment.html
+++ b/ru/investment.html
@@ -158,7 +158,7 @@
               </ul>
             </div>
             <div class="investment__column">
-              <img class="investment__image ibg" src="../assets/img/investment/Graphite.png" alt="">
+              <img class="investment__image ibg" src="../assets/img/investment/Graphite.png" alt="Телефон айфон Инвестиции">
             </div>
           </div>
         </div>
@@ -167,7 +167,7 @@
         <div class="card__wrapper">
           <div class="card">
            <div class="card__column">
-            <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="" />
+            <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская картка" />
           </div>
         <div class="card__column">
           <div class="card-body">
