--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Мультифункциональный<br>мессенджер</p>
+					<p class="card-block-botton">Мультифункциональный мессенджер</p>
 				</div>
 
 				<div class="card-block">
@@ -242,7 +242,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Личная страница<br>с персональной информацией</p>
+					<p class="card-block-botton">Личная страница с персональной информацией</p>
 				</div>
 
 				<div class="card-block">
@@ -260,7 +260,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Новостная лента<br>с развивающим контентом</p>
+					<p class="card-block-botton">Новостная лента с развивающим контентом</p>
 				</div>
 
 				<div class="card-block">
@@ -278,7 +278,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Короткие видео<br>с полезным контентом</p>
+					<p class="card-block-botton">Короткие видео с полезным контентом</p>
 				</div>
 
 				<div class="card-block">
@@ -296,7 +296,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Сервис поиска общения<br>по геолокации</p>
+					<p class="card-block-botton">Сервис поиска общения по геолокации</p>
 				</div>
 
 				<div class="card-block">
@@ -314,7 +314,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Поиск друзей<br>в оффлайн жизни</p>
+					<p class="card-block-botton">Поиск друзей в оффлайн жизни</p>
 				</div>
 
 				<div class="card-block">
@@ -332,7 +332,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Подприложение<br>для знакомств<br>и поиска второй половинки</p>
+					<p class="card-block-botton">Подприложение для знакомств и поиска второй половинки</p>
 				</div>
 
 				<div class="card-block">
@@ -350,7 +350,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Платформа для поиска<br>вакансий и сотрудников</p>
+					<p class="card-block-botton">Платформа для поиска вакансий и сотрудников</p>
 				</div>
 
 				<div class="card-block">
@@ -368,10 +368,10 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Трудный выбор? Спроси<br>мнение других пользователей</p>
+					<p class="card-block-botton">Трудный выбор? Спроси мнение других пользователей</p>
 				</div>
-				<div class="card-block card-block__link">
-					<a  href="./ru/apps.html">Приложения SFERA &#8702; </a>
+				<div class="card-block card-block-botton">
+					<a class="card-block__link"  href="./ru/apps.html">Приложения SFERA &#8702; </a>
 				</div>
 			</div>
 		</section> 
