--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -120,8 +120,8 @@
         <li class="nav_list-item"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="../ru/team.html">Команда</a></li>
         <li class="download_button-tablet">
-          <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
-          <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+          <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="../assets/img/buttons/button-image.svg"> Скачать на Android </a>
+          <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="../assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
         </li>
         <li class="link_tablet-menu" >
           <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
